# Survival-Rush

./: .gitignore  CMakeLists.txt  README.md  Survival Rush.command
include/: AssetLoader.h  Collectible.h  Game.h  Goal.h  HUD.h  Menu.h  Obstacle.h  Player.h
src/: AssetLoader.cpp  Collectible.cpp  Game.cpp  Goal.cpp  HUD.cpp  Menu.cpp  Obstacle.cpp  Player.cpp  main.cpp
